# angelsea

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test-x86-64.yml  build-and-test.yml
doc/: TESTS.md
example/hello/: CMakeLists.txt  main.cpp
include/: angelsea.hpp
include/angelsea/: config.hpp  fnconfig.hpp  jit.hpp
include/angelsea/detail/: bytecode2c.hpp  bytecodedisasm.hpp  bytecodeinstruction.hpp  bytecodetools.hpp  debug.hpp  jitcompiler.hpp  jitfunction.hpp  log.hpp  mirjit.hpp  runtime.hpp  runtimeheader.hpp  stringutil.hpp  util.hpp
src/angelsea/: fnconfig.cpp  jit.cpp
src/angelsea/detail/: bytecode2c.cpp  bytecodedisasm.cpp  jitcompiler.cpp  jitfunction.cpp  mirjit.cpp  runtime.cpp
tests/: CMakeLists.txt  _mir_367393.c  abi.cpp  benchmark.hpp  booleans.cpp  branching.cpp  classmanip.cpp  common.cpp  common.hpp  configtest.cpp  enums.cpp  floatmath.cpp  funcdefs.cpp  functions.cpp  globals.cpp  integermath.cpp  main.cpp  megatests.cpp  nanobench-impl.cpp  post.txt  pre.txt  recursion.cpp  test.txt  typedefs.cpp
tests/scripts/: abi.as  bc_pga_var_test.as  bfint.as  classinheritance.as  devirt.as  enums.as  fib.as  funcdefs.as  functions.as  globals.as  globalswithclasses.as  refprimitives.as  sharedfuncs.as  stringmanip.as  switch.as  typedefs.as  userclasses.as  vec3f.as
